ajout barre recherche

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <p> <strong>Trouver votre hébergement pour des vacances de rêve</strong> </p>
             <p>En plein centre ville ou en pleine nature</p>
 
+            <!--Localisation-->
+
+            <form action="https://www.google.com/maps/@46.2192649,2.0517,6z">
+
+                <input type="text" id="adresse" placeholder="Marseille,France"> <!--barre de recherche-->
+
+                 <id="recherche"><input type="button" value="Rechercher"></form> <!-- Bouton rechercher-->
             
         </nav>
     </header>
