--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/cf4023b3a4.js" crossorigin="anonymous"></script>
     <title></title>
 </head>
 <body>
@@ -28,6 +29,27 @@
                 <input type="text" id="adresse" placeholder="Marseille,France"> <!--barre de recherche-->
 
                  <id="recherche"><input type="button" value="Rechercher"></form> <!-- Bouton rechercher-->
+
+
+                        <!--barre de filtres-->
+                     <p> <strong>Filtres</strong></p>
+
+                     <div class="filtres">
+                         
+                     <div>Economique</div>
+                     <div>Familial</div>
+                     <div>Romantique</div>
+                     <div>Animaux autorisés</div>
+
+                 </div>
+                 <p><i class="fas fa-info"></i> </p>
+
+                 <div class="hébergements"> <!--Block hébergements-->
+
+                    <aside><strong>Hébergements à Marseille</strong></aside>
+
+                 </div>
+
             
         </nav>
     </header>
