--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="France">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,6 +75,7 @@
                         </div>
                         <div class="filtres-bouton-titre"><a href="#">Animaux autorisés</a></div>
                     </div>
+                </div>
             
                                                 <!--Icone information-->
             <div class="infos">                           
@@ -82,6 +83,7 @@
              <div class="infos-gauche"><i class="fas fa-info fa-sm  bleu"></i></div>
               <p class="pad-info">Plus de 500 logements sont disponibles dans cette ville</p>
             </div>  
+
     </section>
 
     <!-- * HEBERGEMENT  -->
