--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
                         alt="photo_hebergement">
                 </figure>
                 <div class="populaire-contenu">
-                    <h3>Au coeur de l'eau
-                    Chambres d'hôtes</h3>
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                     <p>Nuit à partir de <b>71€</b></p>
                     <div class="populaire-whitespace"></div>
                     <div class="populaire-notation">
